// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accent Color 1`] = `
Object {
  "accentColor": "aliceblue",
}
`;

exports[`Accent Color 2`] = `
Object {
  "accentColor": "rgb(22, 22, 22)",
}
`;

exports[`Appearance 1`] = `
Object {
  "props": Array [
    "appearance",
    "none",
  ],
  "type": "css",
  "uid": "style",
  "variants": Array [],
}
`;

exports[`Appearance 2`] = `
Object {
  "-moz-appearance": "none",
  "-webkit-appearance": "none",
  "appearance": "none",
}
`;

exports[`Caret Color 1`] = `
Object {
  "caretColor": "aliceblue",
}
`;

exports[`Caret Color 2`] = `
Object {
  "caretColor": "rgb(22, 22, 22)",
}
`;

exports[`Cursor 1`] = `
Object {
  "cursor": "auto",
}
`;

exports[`Cursor 2`] = `
Object {
  "cursor": "default",
}
`;

exports[`Cursor 3`] = `
Object {
  "cursor": "pointer",
}
`;

exports[`Cursor 4`] = `
Object {
  "cursor": "wait",
}
`;

exports[`Cursor 5`] = `
Object {
  "cursor": "text",
}
`;

exports[`Cursor 6`] = `
Object {
  "cursor": "move",
}
`;

exports[`Cursor 7`] = `
Object {
  "cursor": "help",
}
`;

exports[`Cursor 8`] = `
Object {
  "cursor": "not-allowed",
}
`;

exports[`Pointer Events 1`] = `
Object {
  "pointerEvents": "auto",
}
`;

exports[`Pointer Events 2`] = `
Object {
  "pointerEvents": "none",
}
`;

exports[`Resize 1`] = `
Object {
  "resize": "none",
}
`;

exports[`Scroll Behavior 1`] = `
Object {
  "scrollBehavior": "auto",
}
`;

exports[`Scroll Behavior 2`] = `
Object {
  "scrollBehavior": "smooth",
}
`;

exports[`Touch Action 1`] = `
Object {
  "touchAction": "auto",
}
`;

exports[`Touch Action 2`] = `
Object {
  "touchAction": "none",
}
`;

exports[`Touch Action 3`] = `
Object {
  "touchAction": "pan-x",
}
`;

exports[`Touch Action 4`] = `
Object {
  "touchAction": "pan-left",
}
`;

exports[`Touch Action 5`] = `
Object {
  "touchAction": "pan-right",
}
`;

exports[`Touch Action 6`] = `
Object {
  "touchAction": "pan-y",
}
`;

exports[`Touch Action 7`] = `
Object {
  "touchAction": "pan-up",
}
`;

exports[`Touch Action 8`] = `
Object {
  "touchAction": "pan-down",
}
`;

exports[`Touch Action 9`] = `
Object {
  "touchAction": "pinch-zoom",
}
`;

exports[`Touch Action 10`] = `
Object {
  "touchAction": "manipulation",
}
`;

exports[`User Select 1`] = `
Object {
  "userSelect": "none",
}
`;

exports[`User Select 2`] = `
Object {
  "userSelect": "text",
}
`;

exports[`User Select 3`] = `
Object {
  "userSelect": "all",
}
`;

exports[`User Select 4`] = `
Object {
  "userSelect": "auto",
}
`;

exports[`Will Change 1`] = `
Object {
  "willChange": "auto",
}
`;

exports[`Will Change 2`] = `
Object {
  "willChange": "scroll-position",
}
`;

exports[`Will Change 3`] = `
Object {
  "willChange": "contents",
}
`;

exports[`Will Change 4`] = `
Object {
  "willChange": "transform",
}
`;
